--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "src/js/app.js",
   "scripts": {
     "format": "prettier --write \"*[^build]/**/*[^prod][^bundle].@(css|js|html|json)\"",
-    "clean": "rm -rf ./dist/ ./build/",
-    "dev": "snowpack dev",
-    "build": "npm clean;npm build:html;snowpack build",
+    "clean": "rm -rf ./dist/ ./build/ ./src/html_dist",
+    "dev": "npm run clean;gulp html;snowpack dev",
+    "build": "npm run clean;npm run build:html;snowpack build",
     "build:html": "gulp html"
   },
   "keywords": [
@@ -20,14 +20,16 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "axios": "^0.21.0",
-    "gulp": "^4.0.2",
-    "gulp-file-include": "^2.2.2",
+    "marked": "^1.2.6",
     "mdui": "^1.0.1",
+    "nprogress": "^0.2.0",
     "pdfjs-dist": "^2.5.207",
     "pjax": "^0.2.8"
   },
   "devDependencies": {
     "@snowpack/plugin-webpack": "^2.1.3",
+    "gulp": "^4.0.2",
+    "gulp-file-include": "^2.2.2",
     "prettier": "^2.2.1",
     "snowpack": "^2.18.2"
   }
