--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "format": "prettier --write \"*[^build]/**/*[^prod][^bundle].@(css|js|html|json)\"",
     "clean": "rm -rf ./dist/ ./build/ ./src/html_dist",
     "dev": "npm run clean;gulp html;snowpack dev",
-    "build": "npm run clean;npm run build:html;snowpack build",
-    "build:html": "gulp html"
+    "build": "npm run clean;npm run build:html;snowpack build;node build.cjs",
+    "build:html": "gulp html",
+    "prod:vercel": "npm run clean;vercel --prod",
+    "prod:jsd": "npm run build;bash publish.sh"
   },
   "keywords": [
     "Material Design",
@@ -19,18 +21,19 @@
   "author": "186526 <i@186526.xyz>",
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "axios": "^0.21.0",
     "marked": "^1.2.6",
     "mdui": "^1.0.1",
     "nprogress": "^0.2.0",
-    "pdfjs-dist": "^2.5.207",
     "pjax": "^0.2.8"
   },
   "devDependencies": {
+    "@snowpack/plugin-optimize": "^0.2.10",
     "@snowpack/plugin-webpack": "^2.1.3",
+    "cheerio": "^1.0.0-rc.3",
     "gulp": "^4.0.2",
     "gulp-file-include": "^2.2.2",
     "prettier": "^2.2.1",
     "snowpack": "^2.18.2"
-  }
+  },
+  "homepage": "https://cdn.jsdelivr.net/gh/186526/renexmoe-cdn@v0.4/"
 }
