--- a/package.json
+++ b/package.json
@@ -36,5 +36,6 @@
     "prettier": "^2.2.1",
     "snowpack": "^2.18.2"
   },
-  "homepage": "https://cdn.jsdelivr.net/gh/186526/renexmoe-cdn@v1.1.2/"
+  "homepage": "https://cdn.jsdelivr.net/gh/186526/renexmoe-cdn@v1.1.3/",
+  "sideEffects": false
 }
