--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/js/app.js",
   "scripts": {
     "format": "prettier --write \"*[^build]/**/*[^prod][^bundle].@(css|js|html|json)\"",
-    "clean": "rm -rf ./dist/ ./build/ ./src/html_dist",
+    "clean": "rm -rf ./dist/ ./build/ ./src/html",
     "dev": "npm run clean;gulp html;snowpack dev",
     "build": "npm run clean;npm run build:html;snowpack build;node build.cjs",
     "build:html": "gulp html",
@@ -22,20 +22,20 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "highlight.js": "^10.5.0",
-    "marked": "^1.2.6",
+    "marked": "^1.2.7",
     "mdui": "^1.0.1",
     "nprogress": "^0.2.0",
     "pjax": "^0.2.8"
   },
   "devDependencies": {
-    "@snowpack/plugin-optimize": "^0.2.10",
-    "@snowpack/plugin-webpack": "^2.1.3",
-    "cheerio": "^1.0.0-rc.3",
+    "@snowpack/plugin-optimize": "^0.2.13",
+    "@snowpack/plugin-webpack": "^2.3.0",
+    "cheerio": "^1.0.0-rc.5",
     "gulp": "^4.0.2",
-    "gulp-file-include": "^2.2.2",
+    "gulp-file-include": "^2.3.0",
     "prettier": "^2.2.1",
-    "snowpack": "^2.18.2"
+    "snowpack": "^3.0.11"
   },
-  "homepage": "https://cdn.jsdelivr.net/gh/186526/renexmoe-cdn@v1.1.3/",
+  "homepage": "https://cdn.jsdelivr.net/gh/186526/renexmoe-cdn@v1.1.4",
   "sideEffects": false
 }
